# eee589-asuforia-krishnamurthy

./: README.md  import-summary.txt  settings.gradle
OpenCV/: build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/asuforia_library/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  draw_cube.cpp  pose_estimation.cpp
app/src/main/java/com/example/asuforia_library/: Asuforia.java  DrawPose.java  DrawPoseUtil.java  MainActivity.java  PoseListener.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/asuforia_library/: ExampleUnitTest.java
asuforia/: build.gradle
asuforia/src/androidTest/java/com/example/asuforia/: ExampleInstrumentedTest.java
asuforia/src/main/: AndroidManifest.xml  CMakeLists.txt
asuforia/src/main/cpp/: pose_estimation.cpp
asuforia/src/main/java/com/example/asuforia/: Asuforia.java  CameraInitializer.java  NativePoseEstimatorUtil.java  PoseListener.java
asuforia/src/test/java/com/example/asuforia/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle
